--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Check and Build
 
 env:
-  kernel_repository: xiaomi-msm8953-devs/android_kernel_xiaomi_msm8953
+  kernel_repository: LineageOS/android_kernel_xiaomi_msm8953/tree/lineage-17.1
   kernel_branch: ten
   device: tiffany
   clang_version: r365631c
