--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Check and Build
 
 env:
-  kernel_repository: LineageOS/android_kernel_xiaomi_msm8953/tree/lineage-17.1
-  kernel_branch: ten
+  kernel_repository: LineageOS/android_kernel_xiaomi_msm8953
+  kernel_branch: lineage-17.1
   device: tiffany
   clang_version: r365631c
   defconfig: |
