--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ env:
   kernel_repository: LineageOS/android_kernel_xiaomi_msm8953
   kernel_branch: lineage-17.1
   device: tiffany
-  clang_version: r353983c
+  clang_version: r365631c
   defconfig: |
-    msm8953-perf_defconfig
+    ../msm8953-perf_defconfig
   kernel_patch: |
     backport-path-umount.patch
   kernelsu_patch: |
